Resolve shared Stage 19I kinetic impacts